Update index.html and add images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="https://www.w3.org/1999/xhtml" xmlns:o="urn:schemas-microsoft-com:office:office">
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -16,19 +16,73 @@
       </noscript>
     <![endif]-->
 
+    <!-- Favicon -->
+    <link
+    rel="icon"
+    type="image/png"
+    href="img/Google-favicon.svg"
+  />
      <!-- Google Fonts -->
+     <link rel="preconnect" href="https://fonts.googleapis.com">
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+     
+   <!-- Global Style -->
+   <style>
+    table, td, div, h1, p {font-family: 'Open Sans', Roboto, Helvetica, Arial, sans-serif;}
+
+      /* Desktop */
+    @media only screen and (min-width: 960px) {
+      }
+
+       /* Mid Size */
+     @media only screen and (max-width: 960px) {
+      }
+
+        /* Mobile */
+    @media only screen and (max-width: 600px){}
+
+    @media only screen and (max-width: 480px){}
+</style>
 
 </head>
-<body>
-    <!-- ==========>> Emaili Start <<==========  -->
-    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+<body style="width: 100%; table-layout: fixed; background-color: #FFFEFE; margin: 0 auto; padding: 0;">
+    <!-- ==========>> Email Start <<==========  -->
+    <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
         <tr>
-            <td>
+            <td align="center" style="padding: 0;">
                 <!-- Email Container -->
-                <table class="container" width="600px" align="center" border="0" cellpadding="0" cellspacing="0">
+                <table role="presentation" class="container" style="width:100%; max-width: 600px; " align="center" border="0" cellpadding="0" cellspacing="0">
+                    <!-- ==========>> Start of Google Store Header <<==========  -->
                     <tr>
-                        <td></td>
+                        <td align="center" style="padding: 0;">
+                            <table class="logo-row" id="logo-row" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #F8E1D8;">
+                                <tr>
+                                    <td class="logo" align="center" style=" width: 100% ;padding-top: 19px; padding-bottom: 19px;">
+                                        <img src="img/Google-Title.png" alt="Goole Store Logo" style="display:block; border: none ; height: 30px;">
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
                     </tr>
+                    <!-- ==========>> /End of Google Store Header <<==========  -->
+                    <!-- ==========>> Start of Google Hero <<==========  -->
+                    <tr>
+                        <td align="center" style="padding: 0;">
+                            <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #F8E1D8;">
+                                <tr>
+                                    <td align="center" style="padding: 0">
+                                        <p class="sub-head" style="font-size: 15px; line-height: 21px; color: #3C4043; font-weight: 600;">Pixel Buds Pro</p>
+                                        <h1 class="headline" style="font-size: 40px; line-height: 50px; color: #3C4043;"> Now playing: <br>
+                                            premium sound.
+                                        </h1>
+                                        <p class="subhead" style="font-size: 15px; line-height: 21px; color: #3C4043;"> Active Noise Cancellation with Silent Seal™ immerses you in audio so you can hear your favorite songs and shows like never before.</p>
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                    <!-- ==========>> /End of Google Hero<<==========  -->
                 </table>
                 <!-- /Email Container -->
             </td>
