--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
       }
 
         /* Mobile */
-    @media only screen and (max-width: 600px){}
+    @media only screen and (max-width: 600px){
+        .container{
+            width: 100%;
+        }
+    }
 
     @media only screen and (max-width: 480px){}
 </style>
@@ -52,7 +56,7 @@
         <tr>
             <td align="center" style="padding: 0;">
                 <!-- Email Container -->
-                <table role="presentation" class="container" style="width:100%; max-width: 600px; " align="center" border="0" cellpadding="0" cellspacing="0">
+                <table role="presentation" class="container" width="600" style="width:100%; max-width: 600px; " align="center" border="0" cellpadding="0" cellspacing="0">
                     <!-- ==========>> Start of Google Store Header <<==========  -->
                     <tr>
                         <td align="center" style="padding: 0;">
@@ -71,18 +75,54 @@
                         <td align="center" style="padding: 0;">
                             <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #F8E1D8;">
                                 <tr>
-                                    <td align="center" style="padding: 0">
-                                        <p class="sub-head" style="font-size: 15px; line-height: 21px; color: #3C4043; font-weight: 600;">Pixel Buds Pro</p>
-                                        <h1 class="headline" style="font-size: 40px; line-height: 50px; color: #3C4043;"> Now playing: <br>
-                                            premium sound.
-                                        </h1>
-                                        <p class="subhead" style="font-size: 15px; line-height: 21px; color: #3C4043;"> Active Noise Cancellation with Silent Seal™ immerses you in audio so you can hear your favorite songs and shows like never before.</p>
+                                    <td align="center" style="padding: 0; ">
+                                        <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="margin: 0 auto; width: 100%; max-width: 470px; border-collapse: collapse; margin: 0 0 20px 0;">
+                                            <tr>
+                                                <td align="center" style="padding: 0;">
+                                                    <p class="sub-head" style="font-size: 15px; line-height: 21px; color: #3C4043; font-weight: 600; margin: 20px 0 10px 0">Pixel Buds Pro</p>
+                                                    <h1 class="headline" style="font-size: 40px; font-weight: 700;line-height: 52px; color: #3C4043; margin: 0 0 15px 0;">
+                                                         Now playing: <br>
+                                                        premium sound.
+                                                     </h1>
+                                                    <p class="subhead" style="font-size: 15px; line-height: 21px; color: #3C4043;margin: 0 0 8px 0;"> 
+                                                        Active Noise Cancellation with Silent Seal™ immerses you in audio so you can hear your favorite songs and shows like never before.
+                                                    </p>
+                                                    <h5 class="price" style="font-size: 20px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 30px 0;">
+                                                         $199.99
+                                                    </h5>
+                                                    <a href="#" class="cta-btn" style=" text-align: center; text-decoration: none;background-color: transparent; padding-top: 10px; padding-right: 24px; padding-bottom: 10px; padding-left: 24px; border: 2px solid #3C4043; border-radius: 4px ;color: #3C4043; margin: 0 auto; height: auto;">
+                                                        <span style="font-size:16px; font-weight: 500; line-height: 24px; letter-spacing: 0.1px; color: #3C4043;">Shop Now</span>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        </table>
+                                        <tr>
+                                            <td>
+                                                <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
+                                                    <tr>
+                                                        <td class="empty-spacer" height="23" style="font-family: inherit;
+                                                        box-sizing: border-box;
+                                                        border-collapse: collapse;
+                                                        font-size: 23px;
+                                                        line-height: 23px;
+                                                        padding: 0;"></td>
+                                                    </tr>
+                                                </table>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td align="center" style="padding: 0; width: 100%; font-size: 0;">
+                                                <img src="img/Hero-Pixel-Pro.png" alt="Image of Buds Pro" style="width: 100%; max-width: 600px; font-size: 0; margin: 0 auto;" width="600">
+                                            </td>
+                                        </tr>
                                     </td>
                                 </tr>
                             </table>
                         </td>
                     </tr>
                     <!-- ==========>> /End of Google Hero<<==========  -->
+                    
+                    <!-- ==========>>  <<==========  -->
                 </table>
                 <!-- /Email Container -->
             </td>
@@ -91,3 +131,5 @@
     <!-- ==========>> /Email End  <<==========  -->
 </body>
 </html>
+
+
