Add more content

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <table class="logo-row" id="logo-row" role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #F8E1D8;">
                                 <tr>
                                     <td class="logo" align="center" style=" width: 100% ;padding-top: 19px; padding-bottom: 19px;">
-                                        <img src="img/Google-Title.png" alt="Goole Store Logo" style="display:block; border: none ; height: 30px;">
+                                        <img src="img/Google-Title.png" alt="Goole Store Logo" style="display:block; border: none ; height: 30px; border: none; outline: none">
                                     </td>
                                 </tr>
                             </table>
@@ -104,9 +104,9 @@
                                                         <td class="empty-spacer" height="23" style="font-family: inherit;
                                                         box-sizing: border-box;
                                                         border-collapse: collapse;
-                                                        font-size: 23px;
-                                                        line-height: 23px;
-                                                        padding: 0;"></td>
+                                                        font-size: 0;
+                                                        line-height: 0;
+                                                        padding: 0;">&nbsp;</td>
                                                     </tr>
                                                 </table>
                                             </td>
@@ -126,35 +126,35 @@
 
                     <!-- ==========>> Start of Main Content  <<==========  -->
                     <tr>
-                        <td align="center" style="padding: 45px 20px 24px 20px;">
+                        <td align="center" style="padding: 45px 15px 24px 15px;">
                             <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                 <tr>
                                     <td align="center" style="padding: 0;">
-                                        <h4 style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 20px 0;">Immersive sound with you at the center.</h4>
+                                        <h3 style="font-size: 22px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 20px 0;">Immersive sound with you at the center.</h3>
                                     </td>
                                 </tr>
                                 <!-- Start of Content First Row -->
                                 <tr>
                                     <td align="center" style="padding: 0;">
-                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
+                                        <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td align="left" style="padding: 25px 15px 25px 15px; vertical-align: middle; text-align: center;" width="50%">
-                                                    <h4 class="headline h4" style="font-size: 21px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
+                                                <td class="left-column" align="left" style="padding: 25px 15px 25px 15px; vertical-align: middle; text-align: center;" width="50%">
+                                                    <h3 class="headline h4" style="font-size: 22px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 9px 0;">
                                                         Tune it out or let it in.
-                                                    </h4>
-                                                    <p class="sub-head" style="font-size: 15px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                    </h3>
+                                                    <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
                                                         Block outside sounds with Active Noise Cancellation, or stay aware of your surrounding with Transparency mode.
                                                     </p>
                                                     <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
-                                                        <span style="font-size: 16px; line-height: 10px; vertical-align: top;">
+                                                        <span style="font-size: 15px; line-height: 10px; vertical-align: top;">
                                                             Learn more >
                                                         </span>
                                                     </a>
                                                 </td>
                                                  <!-- Start of Right Column -->
-                                                <td align="right" style="padding: 0; vertical-align: top" width="50%" >
-                                                    <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
+                                                <td class="right-column" align="right" style="padding: 0; vertical-align: top" width="50%" >
+                                                    <img src="img/Tune-in.png" alt="Picture of person working and wearing Buds Pro" style=" border: none; outline: none; ;display: block; width: 100%; max-width: 350px; font-size: 0;" width="350" height="100%">
                                                 </td>
                                             </tr>
                                         </table>
@@ -167,12 +167,12 @@
                                     <td style="padding: 0;">
                                         <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                             <tr>
-                                                <td class="empty-spacer" height="20" style="font-family: inherit;
+                                                <td class="empty-spacer" height="18" style="font-family: inherit;
                                                 box-sizing: border-box;
                                                 border-collapse: collapse;
-                                                font-size: 20px;
-                                                line-height: 20px;
-                                                padding: 0;"></td>
+                                                font-size: 0;
+                                                line-height: 0;
+                                                padding: 0;">&nbsp;</td>
                                             </tr>
                                         </table>
                                     </td>
@@ -182,16 +182,91 @@
                                 <!-- Start of Content Second Row -->
                                 <tr>
                                     <td align="center" style="padding: 0;">
-                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; background-color: #E7EEF3; margin: 0 auto; text-align: center; border-radius: 12px; overflow: hidden;">
+                                        <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: center">
                                             <tr>
                                                 <!-- Start of Left Column -->
-                                                <td align="left" style="padding: 0; text-align: center;" width="50%">
-                                                   
+                                                <td class="left-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
+                                                   <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; text-align: center; border-radius: 12px; overflow: hidden; background-color: #f9e8e3;">
+                                                        <tr>
+                                                            <td class="image" align="left" style="padding: 0; margin: 0 auto; width: 100%; font-size: 0;">
+                                                                <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
+                                                                outline: none; display: block; width: 100%; max-width: 277.5px;" width="277.5">
+                                                            </td>
+                                                        </tr>
+                                                        <!-- Content -->
+                                                        <tr>
+                                                            <td style="padding: 24px 15px 28px 15px;">
+                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                    <tr>
+                                                                        <td align="left" style="padding: 0;">
+                                                                            <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
+                                                                                Hands-free help on the go.
+                                                                            </h4>
+                                                                            <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                                                Make crystal clear calls, charge wirelessly, and get answers from Google. <sup style="vertical-align: top; font-size: 70%;line-height: 1.2;">1,2</sup>
+                                                                            </p>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td align="center">
+                                                                            <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                            </td>
+                                                        </tr>
+                                                        <!-- Content -->
+                                                   </table>
                                                 </td>
+
+                                                <!-- Spacer -->
+                                                <td style=" padding: 0; width: 15px; font-size: 0; line-height: 0;" width="15">
+                                                    &nbsp;
+                                                </td>
+                                                <!-- /Spacer -->
+
                                                  <!-- Start of Right Column -->
-                                                <td align="right" style="padding: 0; vertical-align: top" width="50%" >
-                                                    
-                                                </td>
+                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="273">
+                                                    <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
+                                                         <tr>
+                                                             <td class="image" align="left" style="padding: 0; margin: 0 auto; width: 100%; font-size: 0;">
+                                                                 <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
+                                                                 outline: none; display: block; width: 100%; max-width: 350px; height: auto; font-size: 0;" width="350">
+                                                             </td>
+                                                         </tr>
+                                                         <!-- Content -->
+                                                         <tr>
+                                                             <td style="padding: 24px 15px 28px 15px;">
+                                                                <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse">
+                                                                    <tr>
+                                                                        <td align="left" style="padding: 0;">
+                                                                            <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
+                                                                                A fit made for you.
+                                                                            </h4>
+                                                                            <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                                               Get a snug, stay-put feel with pliable eartips that conform to your ear.
+                                                                            </p>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td align="center" style="padding: 0;">
+                                                                            <a href="#" style="text-decoration: none; color: #1967D2; font-weight: 600;">
+                                                                                <span style="font-size: 14px; line-height: 10px; vertical-align: top;">
+                                                                                    Learn more >
+                                                                                </span>
+                                                                            </a>
+                                                                        </td>
+                                                                    </tr>
+                                                                </table>
+                                                             </td>
+                                                         </tr>
+                                                         <!-- Content -->
+                                                    </table>
+                                                 </td>
                                             </tr>
                                         </table>
                                     </td>
