--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
                     <!-- ==========>> Start of Main Content  <<==========  -->
                     <tr>
-                        <td align="center" style="padding: 45px 15px 24px 15px;">
+                        <td align="center" style="padding: 45px 16px 24px 16px;">
                             <table role="presentation" width="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                 <tr>
                                     <td align="center" style="padding: 0;">
@@ -167,7 +167,7 @@
                                     <td style="padding: 0;">
                                         <table role="presentation" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                                             <tr>
-                                                <td class="empty-spacer" height="18" style="font-family: inherit;
+                                                <td class="empty-spacer" height="16" style="font-family: inherit;
                                                 box-sizing: border-box;
                                                 border-collapse: collapse;
                                                 font-size: 0;
@@ -190,7 +190,7 @@
                                                         <tr>
                                                             <td class="image" align="left" style="padding: 0; margin: 0 auto; width: 100%; font-size: 0;">
                                                                 <img src="img/Hands-Free.png" alt="Picture of a man wearing Buds Pro while taking photos" style="border: none;
-                                                                outline: none; display: block; width: 100%; max-width: 277.5px;" width="277.5">
+                                                                outline: none; display: block; width: 100%; max-width: 350px;" width="350">
                                                             </td>
                                                         </tr>
                                                         <!-- Content -->
@@ -202,7 +202,7 @@
                                                                             <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
                                                                                 Hands-free help on the go.
                                                                             </h4>
-                                                                            <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                                            <p class="sub-head" style="font-size: 12.7px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
                                                                                 Make crystal clear calls, charge wirelessly, and get answers from Google. <sup style="vertical-align: top; font-size: 70%;line-height: 1.2;">1,2</sup>
                                                                             </p>
                                                                         </td>
@@ -224,16 +224,16 @@
                                                 </td>
 
                                                 <!-- Spacer -->
-                                                <td style=" padding: 0; width: 15px; font-size: 0; line-height: 0;" width="15">
+                                                <td style=" padding: 0; width: 16px; font-size: 0; line-height: 0;" width="15">
                                                     &nbsp;
                                                 </td>
                                                 <!-- /Spacer -->
 
                                                  <!-- Start of Right Column -->
-                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="273">
+                                                 <td class="right-column" align="left" style="padding: 0; vertical-align: top; text-align: center;" width="277.5">
                                                     <table role="presentation" width="100%" height="100%" border="0" border-spacing="0" cellpadding="0" cellspacing="0" style="border-collapse: collapse; margin: 0 auto; text-align: left; border-radius: 12px; overflow: hidden; background-color: #f9fcdf;">
                                                          <tr>
-                                                             <td class="image" align="left" style="padding: 0; margin: 0 auto; width: 100%; font-size: 0;">
+                                                             <td class="image" align="left" style="padding: 0; width: 100%; font-size: 0;">
                                                                  <img src="img/Made-For-You.png" alt="Picture of a woman wearing Buds Pro while working out" style="border: none;
                                                                  outline: none; display: block; width: 100%; max-width: 350px; height: auto; font-size: 0;" width="350">
                                                              </td>
@@ -247,7 +247,7 @@
                                                                             <h4 style="font-size: 18px; line-height: 30px; color: #3C4043; font-weight: 700; margin: 0 0 10px 0;">
                                                                                 A fit made for you.
                                                                             </h4>
-                                                                            <p class="sub-head" style="font-size: 14px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
+                                                                            <p class="sub-head" style="font-size: 12.7px; line-height: 22px; color: #3C4043;margin: 0 0 20px 0;">
                                                                                Get a snug, stay-put feel with pliable eartips that conform to your ear.
                                                                             </p>
                                                                         </td>
